2006-09-14   Ping Cheng <pingc@wacom.com>
	* Fixed a filter bug (Wolfgang Oertl, etc).
        * Ready to release 0.7.5-3

2006-09-13   Ping Cheng <pingc@wacom.com>
        * Fixed a typo in 2.6.18/Makefile.in (Mats Johannesson)
        * Ready to release 0.7.5-2

2006-09-12   Ping Cheng <pingc@wacom.com>
	* Updated Makefile.am for xdrv (Magnus Vigerlöf)
	* Fixed a typo in 2.4.x/wacom.c (Magnus Vigerlöf)
	* Cleaned initialization code for tablet unplug/plug 

2006-09-08   Ping Cheng <pingc@wacom.com>
	* Fixed Graphire 4 pad/wheel bug
	* Unified support of USB hot plug/unplug with different tablets
	  for both XFree86 and Xorg
	* Ready to release 0.7.5-1 

2006-08-30   Ping Cheng <pingc@wacom.com>
	* Added Intuos3 4x6 support
	* Updated acinclude.m4 and configure.in
	* Fixed a pad display issue in xidump.c and wacom_drv.o (Mats Johannesson)

2006-08-24   Ping Cheng <pingc@wacom.com>
	* Added GetTabletID to "xsetwacom get" command for apps in X space 
	  to acquire USB tablet's ID
	* Added Rotate to "xsetwacom set" command to change tablet orentation 
	  (Patch 1170661 from Denis Auroux)
	* Incorporated Andrew Zabolotny's patches

2006-08-22   Ping Cheng <pingc@wacom.com>
	* Updated acinclude.m4 scripts for kernel 2.6.18
	* Updated wacom.c for accurately report tablet buttons

2006-08-18   Ping Cheng <pingc@wacom.com>
	* Updated configure scripts and xidump.c 
	* Support USB hot plug/unplug with different tablets

2006-08-10   Ping Cheng <pingc@wacom.com>
	* Backward tablet menu strip support
 
2006-08-07   Ping Cheng <pingc@wacom.com>
	* Created 3 new directories, xdrv, include, and util under src to store 
	  X driver, common headers, and utility programs separately

2006-08-03   Ping Cheng <pingc@wacom.com>
	* Increased MAX_SUPPRESS from 6 to 20 (Patch ID 1529268 from Wolfgang Oertl)
	* Updated wacomcpl 

2006-07-28   Ping Cheng <pingc@wacom.com>
	* Updated xsetwacom to avoid writing data to files from X driver (more work to be done)